// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchResultsPage Components both professors and courses found 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ui huge header block-display"
      >
        Showing search results for 
        <em>
           
           
        </em>
      </div>
      <div
        class="ui divider"
      />
      <div
        class="ui huge header block-display"
      >
         Professors 
      </div>
      <div
        class="ui grid"
      >
        <div
          class="row"
        >
          <div
            class="six wide column"
          >
            <a
              href="/professor/2339"
            >
              <span
                class=""
              >
                Nakul Verma
              </span>
            </a>
            <span>
               
              <img
                class="ui medium right spaced image"
                src="gold-nugget.svg"
              />
            </span>
            <span>
              <img
                class="ui medium right spaced image"
                src="silver-nugget.svg"
              />
            </span>
          </div>
          <div
            class="ten wide column"
          >
            <span>
              <a
                href="/department/29"
              >
                <span
                  class=""
                >
                  Computer Science
                </span>
              </a>
              
            </span>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="six wide column"
          >
            <a
              href="/professor/40"
            >
              <span
                class=""
              >
                Lydia Chilton
              </span>
            </a>
          </div>
          <div
            class="ten wide column"
          >
            <span>
              <a
                href="/department/29"
              >
                <span
                  class=""
                >
                  Computer Science
                </span>
              </a>
              
            </span>
          </div>
        </div>
      </div>
      <div
        class="ui hidden divider"
      />
      <div
        class="ui huge header block-display"
      >
         Courses 
      </div>
      <div
        class="ui grid"
      >
        <div
          class="row"
        >
          <div
            class="six wide column"
          >
            <a
              href="/course/1"
            >
              <span
                class=""
              >
                
                 
                User Interface Design
              </span>
            </a>
          </div>
          <div
            class="ten wide column"
          >
            <span>
              <a
                href="/department/6"
              >
                <span
                  class=""
                >
                  Computer Science
                </span>
              </a>
              
            </span>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="six wide column"
          >
            <a
              href="/course/2"
            >
              <span
                class=""
              >
                
                 
                Machine Learning
              </span>
            </a>
          </div>
          <div
            class="ten wide column"
          >
            <span>
              <a
                href="/department/6"
              >
                <span
                  class=""
                >
                  Computer Science
                </span>
              </a>
              
            </span>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ui huge header block-display"
    >
      Showing search results for 
      <em>
         
         
      </em>
    </div>
    <div
      class="ui divider"
    />
    <div
      class="ui huge header block-display"
    >
       Professors 
    </div>
    <div
      class="ui grid"
    >
      <div
        class="row"
      >
        <div
          class="six wide column"
        >
          <a
            href="/professor/2339"
          >
            <span
              class=""
            >
              Nakul Verma
            </span>
          </a>
          <span>
             
            <img
              class="ui medium right spaced image"
              src="gold-nugget.svg"
            />
          </span>
          <span>
            <img
              class="ui medium right spaced image"
              src="silver-nugget.svg"
            />
          </span>
        </div>
        <div
          class="ten wide column"
        >
          <span>
            <a
              href="/department/29"
            >
              <span
                class=""
              >
                Computer Science
              </span>
            </a>
            
          </span>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="six wide column"
        >
          <a
            href="/professor/40"
          >
            <span
              class=""
            >
              Lydia Chilton
            </span>
          </a>
        </div>
        <div
          class="ten wide column"
        >
          <span>
            <a
              href="/department/29"
            >
              <span
                class=""
              >
                Computer Science
              </span>
            </a>
            
          </span>
        </div>
      </div>
    </div>
    <div
      class="ui hidden divider"
    />
    <div
      class="ui huge header block-display"
    >
       Courses 
    </div>
    <div
      class="ui grid"
    >
      <div
        class="row"
      >
        <div
          class="six wide column"
        >
          <a
            href="/course/1"
          >
            <span
              class=""
            >
              
               
              User Interface Design
            </span>
          </a>
        </div>
        <div
          class="ten wide column"
        >
          <span>
            <a
              href="/department/6"
            >
              <span
                class=""
              >
                Computer Science
              </span>
            </a>
            
          </span>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="six wide column"
        >
          <a
            href="/course/2"
          >
            <span
              class=""
            >
              
               
              Machine Learning
            </span>
          </a>
        </div>
        <div
          class="ten wide column"
        >
          <span>
            <a
              href="/department/6"
            >
              <span
                class=""
              >
                Computer Science
              </span>
            </a>
            
          </span>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`SearchResultsPage Components no results found 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ui huge header block-display"
      >
        Showing search results for 
        <em>
           
           
        </em>
      </div>
      <div
        class="ui divider"
      />
      <div
        class="ui huge header block-display"
      >
         Professors 
      </div>
      <p>
         No result found 
      </p>
      <div
        class="ui hidden divider"
      />
      <div
        class="ui huge header block-display"
      >
         Courses 
      </div>
      <p>
         No result found 
      </p>
    </div>
  </body>,
  "container": <div>
    <div
      class="ui huge header block-display"
    >
      Showing search results for 
      <em>
         
         
      </em>
    </div>
    <div
      class="ui divider"
    />
    <div
      class="ui huge header block-display"
    >
       Professors 
    </div>
    <p>
       No result found 
    </p>
    <div
      class="ui hidden divider"
    />
    <div
      class="ui huge header block-display"
    >
       Courses 
    </div>
    <p>
       No result found 
    </p>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`SearchResultsPage Components only courses found 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ui huge header block-display"
      >
        Showing search results for 
        <em>
           
           
        </em>
      </div>
      <div
        class="ui divider"
      />
      <div
        class="ui huge header block-display"
      >
         Professors 
      </div>
      <p>
         No result found 
      </p>
      <div
        class="ui hidden divider"
      />
      <div
        class="ui huge header block-display"
      >
         Courses 
      </div>
      <div
        class="ui grid"
      >
        <div
          class="row"
        >
          <div
            class="six wide column"
          >
            <a
              href="/course/1"
            >
              <span
                class=""
              >
                
                 
                User Interface Design
              </span>
            </a>
          </div>
          <div
            class="ten wide column"
          >
            <span>
              <a
                href="/department/6"
              >
                <span
                  class=""
                >
                  Computer Science
                </span>
              </a>
              
            </span>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="six wide column"
          >
            <a
              href="/course/2"
            >
              <span
                class=""
              >
                
                 
                Machine Learning
              </span>
            </a>
          </div>
          <div
            class="ten wide column"
          >
            <span>
              <a
                href="/department/6"
              >
                <span
                  class=""
                >
                  Computer Science
                </span>
              </a>
              
            </span>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ui huge header block-display"
    >
      Showing search results for 
      <em>
         
         
      </em>
    </div>
    <div
      class="ui divider"
    />
    <div
      class="ui huge header block-display"
    >
       Professors 
    </div>
    <p>
       No result found 
    </p>
    <div
      class="ui hidden divider"
    />
    <div
      class="ui huge header block-display"
    >
       Courses 
    </div>
    <div
      class="ui grid"
    >
      <div
        class="row"
      >
        <div
          class="six wide column"
        >
          <a
            href="/course/1"
          >
            <span
              class=""
            >
              
               
              User Interface Design
            </span>
          </a>
        </div>
        <div
          class="ten wide column"
        >
          <span>
            <a
              href="/department/6"
            >
              <span
                class=""
              >
                Computer Science
              </span>
            </a>
            
          </span>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="six wide column"
        >
          <a
            href="/course/2"
          >
            <span
              class=""
            >
              
               
              Machine Learning
            </span>
          </a>
        </div>
        <div
          class="ten wide column"
        >
          <span>
            <a
              href="/department/6"
            >
              <span
                class=""
              >
                Computer Science
              </span>
            </a>
            
          </span>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`SearchResultsPage Components only professors found 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ui huge header block-display"
      >
        Showing search results for 
        <em>
           
           
        </em>
      </div>
      <div
        class="ui divider"
      />
      <div
        class="ui huge header block-display"
      >
         Professors 
      </div>
      <div
        class="ui grid"
      >
        <div
          class="row"
        >
          <div
            class="six wide column"
          >
            <a
              href="/professor/2339"
            >
              <span
                class=""
              >
                Nakul Verma
              </span>
            </a>
            <span>
               
              <img
                class="ui medium right spaced image"
                src="gold-nugget.svg"
              />
            </span>
            <span>
              <img
                class="ui medium right spaced image"
                src="silver-nugget.svg"
              />
            </span>
          </div>
          <div
            class="ten wide column"
          >
            <span>
              <a
                href="/department/29"
              >
                <span
                  class=""
                >
                  Computer Science
                </span>
              </a>
              
            </span>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="six wide column"
          >
            <a
              href="/professor/40"
            >
              <span
                class=""
              >
                Lydia Chilton
              </span>
            </a>
          </div>
          <div
            class="ten wide column"
          >
            <span>
              <a
                href="/department/29"
              >
                <span
                  class=""
                >
                  Computer Science
                </span>
              </a>
              
            </span>
          </div>
        </div>
      </div>
      <div
        class="ui hidden divider"
      />
      <div
        class="ui huge header block-display"
      >
         Courses 
      </div>
      <p>
         No result found 
      </p>
    </div>
  </body>,
  "container": <div>
    <div
      class="ui huge header block-display"
    >
      Showing search results for 
      <em>
         
         
      </em>
    </div>
    <div
      class="ui divider"
    />
    <div
      class="ui huge header block-display"
    >
       Professors 
    </div>
    <div
      class="ui grid"
    >
      <div
        class="row"
      >
        <div
          class="six wide column"
        >
          <a
            href="/professor/2339"
          >
            <span
              class=""
            >
              Nakul Verma
            </span>
          </a>
          <span>
             
            <img
              class="ui medium right spaced image"
              src="gold-nugget.svg"
            />
          </span>
          <span>
            <img
              class="ui medium right spaced image"
              src="silver-nugget.svg"
            />
          </span>
        </div>
        <div
          class="ten wide column"
        >
          <span>
            <a
              href="/department/29"
            >
              <span
                class=""
              >
                Computer Science
              </span>
            </a>
            
          </span>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="six wide column"
        >
          <a
            href="/professor/40"
          >
            <span
              class=""
            >
              Lydia Chilton
            </span>
          </a>
        </div>
        <div
          class="ten wide column"
        >
          <span>
            <a
              href="/department/29"
            >
              <span
                class=""
              >
                Computer Science
              </span>
            </a>
            
          </span>
        </div>
      </div>
    </div>
    <div
      class="ui hidden divider"
    />
    <div
      class="ui huge header block-display"
    >
       Courses 
    </div>
    <p>
       No result found 
    </p>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
